--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -63,38 +63,39 @@
     <tbody id="list">
     </tbody>
 </table>
-
+<div id="pageable"></div>
 <!-- Modal edit -->
 <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Add</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Edit</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <form class="modal-body" id="editForm">
+                <form class="modal-body" id="editForm" enctype="multipart/form-data" >
                     <input type="hidden" id="id">
                     <label>Name:</label>
                     <input type="text" id="name" name="name" class="form-control">
                     <label>Image:</label>
-                    <input type="text" id="image" name="image" class="form-control">
+                    <input type="file" id="fileedit" name="file" class="form-control">
+                    <div id="old-file"></div>
                     <label>Address:</label>
                     <input type="text" id="address" name="address" class="form-control">
                     <label>Price:</label>
                     <input type="number" id="price" name="price" class="form-control">
                     <label>QuantityBath:</label>
-                    <input type="number" id="quantityBath" name="quantityBath" class="form-control">
+                    <input type="number" id="quantityBathroom" name="quantityBathroom" class="form-control">
                     <label>QuantityBed:</label>
-                    <input type="number" id="quantityBed" name="quantityBed" class="form-control">
+                    <input type="number" id="quantityBedroom" name="quantityBedroom" class="form-control">
                 </form>
             </div>
 
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" onclick="eidt()">Save Changes</button>
+                <button type="button" class="btn btn-primary" onclick="editHouse()">Save Changes</button>
             </div>
         </div>
     </div>
@@ -103,25 +104,25 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Edit</h5>
+                <h5 class="modal-title">Add</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <form class="modal-body" id="addForm">
+                <form class="modal-body" id="addForm" enctype="multipart/form-data">
                     <label>Name:</label>
                     <input type="text" name="name" class="form-control">
                     <label>Image:</label>
-                    <input type="text" name="image" class="form-control">
+                    <input type="file" name="file" class="form-control" onclick="editNew()">
                     <label>Address:</label>
                     <input type="text" name="address" class="form-control">
                     <label>Price:</label>
                     <input type="number" name="price" class="form-control">
                     <label>QuantityBath:</label>
-                    <input type="number" name="quantityBath" class="form-control">
+                    <input type="number" name="quantityBathroom" class="form-control">
                     <label>QuantityBed:</label>
-                    <input type="number" name="quantityBed" class="form-control">
+                    <input type="number" name="quantityBedroom" class="form-control">
                 </form>
             </div>
 
@@ -142,7 +143,7 @@
             type: "GET",
             url: "http://localhost:8080/api/houses",
             success: function (houses) {
-                loadTable(houses);
+                loadTable(houses.content);
             }
         })
     }
@@ -157,42 +158,62 @@
                 <td class="table-secondary">${houses[i].price}</td>
                 <td class="table-success">${houses[i].quantityBathroom}</td>
                 <td class="table-danger">${houses[i].quantityBedroom}</td>
+                <td class="table-danger"><img src="/image/${houses[i].image}" style="width: 100px"></td>
                 <td class="table-danger"><button onclick="showEditForm(${houses[i].id})">Edit</button><button onclick="deleteHouse(${houses[i].id})">Delete</button></td>
             </tr>`
         }
         list.innerHTML = str;
     }
 
+    findAll(0);
+
+    function findAll(number) {
+        let pageable = document.getElementById("pageable")
+        $.ajax({
+            type: "GET",
+            url: "http://localhost:8080/api/houses?page=" + number,
+            success: function (data) {
+                console.log(data)
+                loadTable(data.content);
+                let str = ""
+                let num = data.pageable.pageNumber
+                console.log(num)
+                if (num - 1 >= 0) {
+                    str += `<button onclick="findAll(${num - 1})">Trước</button>`
+                }
+                str += `${num + 1}/${data.totalPages}`
+                if (num + 1 < data.totalPages) {
+                    str += `<button onclick="findAll(${num + 1})">Sau</button>`
+                }
+                pageable.innerHTML = str
+            }
+        });
+    }
+
+
     function showAddForm() {
         $("#addModal").modal("show")
     }
 
     function save() {
-        let formData = new FormData(addForm)
-        let houses = {
-            name: formData.get("name"),
-            address: formData.get("address"),
-            quantityBedroom: formData.get("quantityBed"),
-            quantityBathroom: formData.get("quantityBath"),
-            price: formData.get("price"),
-            image: formData.get("image"),
-        }
-        console.log(houses)
+        let formData = new FormData(addForm);
         $.ajax({
-            headers: {
-                'Accept': 'application/json',
-                'Content-Type': 'application/json',
-            },
+            enctype: "multipart/form-data",
             type: "POST",
             url: "http://localhost:8080/api/houses",
-            data: JSON.stringify(houses),
+            data: formData,
+            processData: false,
+            contentType: false,
+            cache: false,
+            timeout: 1000000,
             success: function () {
-                loadData();
-                $("#modalAdd").modal("hide")
+                loadData()
+                $('#addModal').modal('hide');
+                addForm.reset();
             },
             error: function (error) {
                 console.log(error)
-            },
+            }
         })
     }
 
@@ -205,43 +226,88 @@
                 document.getElementById("id").value = houses.id
                 document.getElementById("name").value = houses.name
                 document.getElementById("address").value = houses.address
-                document.getElementById("quantityBed").value = houses.quantityBedroom
-                document.getElementById("quantityBath").value = houses.quantityBathroom
+                document.getElementById("quantityBedroom").value = houses.quantityBedroom
+                document.getElementById("quantityBathroom").value = houses.quantityBathroom
                 document.getElementById("price").value = houses.price
-                document.getElementById("image").value = houses.image
+                if (editNew())
+                // document.getElementById("fileedit").value = houses.image
+                document.getElementById("old-file").innerHTML = `<img src="/image/${houses.image}" style="width: 100px">`
+
             }
         })
     }
 
-    function eidt() {
+    // function edit() {
+    //     let formData = new FormData(editForm);
+    //     let id = document.getElementById("id").value;
+    //     let houses = {
+    //         name: formData.get("name"),
+    //         address: formData.get("address"),
+    //         quantityBedroom: formData.get("quantityBed"),
+    //         quantityBathroom: formData.get("quantityBath"),
+    //         price: formData.get("price"),
+    //         image: formData.get("file"),
+    //     }
+    //     console.log(houses)
+    //     $.ajax({
+    //         headers: {
+    //             'Accept': 'application/json',
+    //             'Content-Type': 'application/json',
+    //         },
+    //         type: "PUT",
+    //         url: "http://localhost:8080/api/houses/" + id,
+    //         data: JSON.stringify(houses),
+    //         success: function () {
+    //             loadData();
+    //             $("#modalAdd").modal("hide")
+    //         },
+    //         error: function (error) {
+    //             console.log(error)
+    //         },
+    //     })
+    // }
+    function editHouse() {
         let formData = new FormData(editForm);
         let id = document.getElementById("id").value;
-        let houses = {
-            name: formData.get("name"),
-            address: formData.get("address"),
-            quantityBedroom: formData.get("quantityBed"),
-            quantityBathroom: formData.get("quantityBath"),
-            price: formData.get("price"),
-            image: formData.get("image"),
-        }
-        console.log(houses)
         $.ajax({
-            headers: {
-                'Accept': 'application/json',
-                'Content-Type': 'application/json',
-            },
+            // headers: {
+            //     'Accept': 'application/json',
+            //     'Content-Type': 'application/json',
+            // },
+            enctype: "multipart/form-data",
             type: "PUT",
             url: "http://localhost:8080/api/houses/" + id,
-            data: JSON.stringify(houses),
+            data: formData,
+            processData: false,
+            contentType: false,
+            cache: false,
+            timeout: 1000000,
             success: function () {
-                loadData();
-                $("#modalAdd").modal("hide")
+                findAll(0)
+                $('#editModal').modal('hide');
+                editForm.reset();
             },
             error: function (error) {
                 console.log(error)
-            },
+            }
         })
     }
+   function deleteHouse(id){
+       $.ajax({
+           headers: {
+               'Accept': 'application/json',
+               'Content-Type': 'application/json',
+           },
+           type: "DELETE",
+           url: "http://localhost:8080/api/houses/" + id,
+           success: function (){
+           findAll(0)
+           },
+           error:function (error){
+               console.log(error)
+           },
+       })
+   }
 </script>
 </body>
 </html>
